--- a/testAssignment/src/main/resources/templates/puzzle.html
+++ b/testAssignment/src/main/resources/templates/puzzle.html
@@ -28,6 +28,12 @@
 
             <div class="row my-3">
                 <div class="col  d-flex justify-content-center">
+                    <p th:text="'longestSequenceLength: ' + (${longestSequenceLength} == null ? ' ' : ${longestSequenceLength})"></p>
+                </div>
+            </div>
+
+            <div class="row my-3">
+                <div class="col  d-flex justify-content-center">
                     <button type="submit" class="btn btn-success">Calculate</button>
                 </div>
             </div>
